--- a/config/west.yml
+++ b/config/west.yml
@@ -9,7 +9,7 @@ manifest:
   projects:
     - name: zmk
       remote: AakashDabas
-      revision: animated_widgets
+      revision: main
       import: app/west.yml
   self:
     path: config
